--- a/alembic.ini
+++ b/alembic.ini
@@ -36,7 +36,7 @@ version_locations = %(here)s/alembic/versions
 # are written from script.py.mako
 output_encoding = utf-8
 
-sqlalchemy.url = postgresql://mosprom_user:mosprom_password@postgres:5432/mosprom_db
+sqlalchemy.url = postgresql://mosprom_user:mosprom_password@localhost:5432/mosprom_db
 
 
 [post_write_hooks]
