--- a/pyproject.toml
+++ b/pyproject.toml
@@ -22,6 +22,7 @@ openpyxl = "^3.1.2"
 jinja2 = "^3.1.3"
 python-multipart = "^0.0.6"
 pandas = "^2.2.0"
+httpx = "^0.28.1"
 
 [tool.poetry.group.dev.dependencies]
 black = "^24.1.1"
