--- a/settings.toml
+++ b/settings.toml
@@ -45,6 +45,12 @@ upload_dir = "uploads"
 default_page_size = 50
 max_page_size = 1000
 
+# FNS API settings
+[default.fns_api]
+api_key = "41adc9fde1524943415a702da4626be313423d2b"  # Get your key from https://api-fns.ru/
+enabled = true
+timeout = 30
+
 # Production settings (override when needed)
 [production]
 debug = false
