--- a/.env.example
+++ b/.env.example
@@ -1,18 +1,7 @@
-# Copy this file to .env and update values as needed
-
-# Application Environment (development, production)
-# MOSPROM_ENV=development
-
-# Database Configuration (override settings.toml if needed)
-# MOSPROM_DATABASE__HOST=postgres
-# MOSPROM_DATABASE__PORT=5432
-# MOSPROM_DATABASE__NAME=mosprom_db
-# MOSPROM_DATABASE__USER=mosprom_user
-# MOSPROM_DATABASE__PASSWORD=mosprom_password
-
-# Redis Configuration
-# MOSPROM_REDIS__HOST=redis
-# MOSPROM_REDIS__PORT=6379
-
-# Logging
-# MOSPROM_LOGGING__LEVEL=INFO
+POSTGRES_USER=mosprom_user
+POSTGRES_PASSWORD=mosprom_password
+POSTGRES_DB=mosprom_db
+DATABASE_URL=postgresql://mosprom_user:mosprom_password@localhost:5432/mosprom_db
+REDIS_URL=redis://localhost:6379/0
+SECRET_KEY=your-secret-key-here
+DEBUG=true
