--- a/settings.toml
+++ b/settings.toml
@@ -1,12 +1,10 @@
 [default]
-# Application settings
 app_name = "Industrial Data Moscow"
 app_version = "0.1.0"
 debug = true
 host = "0.0.0.0"
 port = 8000
 
-# Database settings
 [default.database]
 host = "localhost"
 port = 5432
@@ -17,15 +15,6 @@ echo = false
 pool_size = 5
 max_overflow = 10
 
-# Redis settings
-[default.redis]
-host = "localhost"
-port = 6379
-db = 0
-decode_responses = true
-cache_ttl = 3600        # 1 hour in seconds
-
-# Logging settings
 [default.logging]
 level = "INFO"
 log_dir = "logs"
@@ -34,31 +23,26 @@ log_format = "json"
 log_to_console = true
 log_to_file = true
 
-# File upload settings
 [default.upload]
-max_file_size = 10485760               # 10MB in bytes
+max_file_size = 10485760
 allowed_extensions = [".xlsx", ".xls"]
 upload_dir = "uploads"
 
-# Pagination settings
 [default.pagination]
 default_page_size = 50
 max_page_size = 1000
 
-# FNS API settings
 [default.fns_api]
-api_key = "41adc9fde1524943415a702da4626be313423d2b"  # Get your key from https://api-fns.ru/
+api_key = "41adc9fde1524943415a702da4626be313423d2b"
 enabled = true
 timeout = 30
 
-# Production settings (override when needed)
 [production]
 debug = false
 
 [production.logging]
 level = "WARNING"
 
-# Development settings
 [development]
 debug = true
 
