--- a/docker-compose.yaml
+++ b/docker-compose.yaml
@@ -2,31 +2,14 @@ services:
   postgres:
     image: postgres:16-alpine
     container_name: mosprom_postgres
-    env_file:
-      - .env
+    env_file: [ .env ]
     environment:
       PGDATA: /var/lib/postgresql/data/pgdata
     volumes:
       - ./postgres_data:/var/lib/postgresql/data
-    ports:
-      - "5432:5432"
+    ports: [ "5432:5432" ]
     healthcheck:
       test: [ "CMD-SHELL", "pg_isready -U ${POSTGRES_USER} -d ${POSTGRES_DB}" ]
-      interval: 10s
-      timeout: 5s
-      retries: 5
-
-  redis:
-    image: redis:7-alpine
-    container_name: mosprom_redis
-    command: redis-server /usr/local/etc/redis/redis.conf
-    volumes:
-      - ./redis_data:/data
-      - ./redis.conf:/usr/local/etc/redis/redis.conf
-    ports:
-      - "6379:6379"
-    healthcheck:
-      test: [ "CMD", "redis-cli", "ping" ]
       interval: 10s
       timeout: 5s
       retries: 5
