--- a/pyproject.toml
+++ b/pyproject.toml
@@ -25,7 +25,8 @@ httpx = "^0.28.1"
 
 [tool.poetry.group.dev.dependencies]
 black = "^24.1.1"
-flake8 = "^7.0.0"
+flake8
+ = "^7.0.0"
 
 [tool.black]
 line-length = 79
