--- a/pyproject.toml
+++ b/pyproject.toml
@@ -2,7 +2,7 @@
 name = "mosprom"
 version = "0.1.0"
 description = "Industrial Data Moscow - Web Application"
-authors = ["Your Name <your.email@example.com>"]
+authors = ["Devouring"]
 readme = "README.md"
 packages = [{ include = "app" }]
 
@@ -20,13 +20,11 @@ pydantic-settings = "^2.1.0"
 openpyxl = "^3.1.2"
 jinja2 = "^3.1.3"
 python-multipart = "^0.0.6"
-pandas = "^2.2.0"
 httpx = "^0.28.1"
 
 [tool.poetry.group.dev.dependencies]
 black = "^24.1.1"
-flake8
- = "^7.0.0"
+flake8 = "^7.0.0"
 
 [tool.black]
 line-length = 79
@@ -44,11 +42,6 @@ extend-exclude = '''
   | dist
 )/
 '''
-
-[tool.flake8]
-max-line-length = 79
-extend-ignore = ["E203", "W503"]
-exclude = [".git", "__pycache__", "build", "dist", ".venv", "venv"]
 
 [build-system]
 requires = ["poetry-core"]
